Latest flicker ball holder CAD

--- a/3D Printer Setting.ini
+++ b/3D Printer Setting.ini
@@ -1,16 +1,16 @@
 [profile]
 layer_height = 0.1
-wall_thickness = 1.0
+wall_thickness = 3
 retraction_enable = True
-solid_layer_thickness = 1.0
-fill_density = 50
+solid_layer_thickness = 3
+fill_density = 100
 nozzle_size = 0.4
-print_speed = 50
-print_temperature = 210
+print_speed = 26
+print_temperature = 246
 print_temperature2 = 0
 print_temperature3 = 0
 print_temperature4 = 0
-print_bed_temperature = 30
+print_bed_temperature = 60
 support = None
 platform_adhesion = None
 support_dual_extrusion = Both
@@ -21,9 +21,9 @@ filament_diameter = 1.75
 filament_diameter2 = 0
 filament_diameter3 = 0
 filament_diameter4 = 0
-filament_flow = 100
+filament_flow = 100.0
 retraction_speed = 40.0
-retraction_amount = 4
+retraction_amount = 5
 retraction_dual_amount = 16.5
 retraction_min_travel = 1.5
 retraction_combing = True
@@ -33,13 +33,13 @@ bottom_thickness = 0.3
 layer0_width_factor = 100
 object_sink = 0.0
 overlap_dual = 0.15
-travel_speed = 150.0
+travel_speed = 50.0
 bottom_layer_speed = 20
-infill_speed = 60
-inset0_speed = 30
-insetx_speed = 40
+infill_speed = 0
+inset0_speed = 0.0
+insetx_speed = 0.0
 cool_min_layer_time = 20
-fan_enabled = False
+fan_enabled = True
 skirt_line_count = 1
 skirt_gap = 3.0
 skirt_minimal_length = 150.0
